--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="mark_point">Point A</string>
+    <string name="title_activity_distance_parameters">DistanceParametersActivity</string>
 </resources>
