--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,15 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="mark_point">Point A</string>
     <string name="title_activity_distance_parameters">DistanceParametersActivity</string>
+    <string name="home">The app Measure is the result of a TdR (Treball de Recerca), a project in which students get the opportunity to research in a specific field they like.\n
+
+\nThe aim of the project is to give everyone a reliable tool to measure and identify the geometries around them at any situation, without any necessity of specific equipment which is not usually carried around, like a meter. To archive that, the solution uses something we all have with us everywhere, our mobile phones. Although there are some solutions which use a more sophisticated way of doing it, we wanted to explore a more mathematical approach.\n
+
+\nThis project was developed between 2018 and 2019 by the student Albert Canales Ros, and tutored by the Mathematics Doctor Jordi Sorolla.\n
+
+\nThe whole process of making the app can be found on BitBucket using the following link: \ncanales2002@bitbucket.org/canales2002/measure.git\n
+
+\nIn order to contact us for any reason, we would appreciate you to do it by the email: albertcanalesros@gmail.com\n
+
+\nWe hope you enjoy the app and you find it useful!\n</string>
 </resources>
