--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
 \nIn order to contact us for any reason, we would appreciate you to do it by the email: albertcanalesros@gmail.com\n
 
 \nWe hope you enjoy the app and you find it useful!\n</string>
+    <string name="title_activity_results">ResultsActivity</string>
+    <string name="points">Points</string>
+    <string name="angles">Angles</string>
+    <string name="distances">Distances</string>
+    <string name="areas">Areas</string>
+    <string name="volumes">Volumes</string>
 </resources>
