Added Distances on Results and various minor improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="distances">Distances</string>
     <string name="areas">Areas</string>
     <string name="volumes">Volumes</string>
+    <string name="cm">
+        cm</string>
 </resources>
