--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,12 +20,13 @@
     <string name="cm">
         cm</string>
 
+    <string name="title_activity_tutorial">Tutorial</string>
+
     <string-array name="area_types_array">
         <item>Triangle</item>
         <item>Parallelogram</item>
         <!-- <item>General quadrilateral</item> !-->
     </string-array>
-
     <string-array name="volume_types_array">
         <item>Pyramid</item>
         <item>Prism</item>
