--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <!-- About Us -->
     <string name="title_activity_about_us">About Us</string>
     <string name="aboutUs">The app Measure is the result of a TdR (Treball de Recerca), a project in which students get the opportunity to research in a specific field they like.\nThe aim of the project is to give everyone a reliable tool to measure and identify the geometries around them at any situation, without any necessity of specific equipment which is not usually carried around, like a meter. To archive that, the solution uses something we all have with us everywhere, our mobile phones. Although there are some solutions which use a more sophisticated way of doing it, we wanted to explore a more mathematical approach. \nThis project was developed between 2018 and 2019 by the student Albert Canales Ros, and tutored by Jordi Sorolla, PhD in Mathematics. \nThe whole process of making the app can be found on BitBucket by clicking the button below. \nIn order to contact us for any reason, we would appreciate you to do it by the email: albertcanalesros@gmail.com. \nWe hope you enjoy the app and you find it useful!\n</string>
+    <string name="source_code">Source Code</string>
 
     <!-- Test Sensors -->
     <string name="title_activity_sensor_test">Sensor Test</string>
