--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- General -->
-    <string name="app_name">Measure</string>
+    <string name="app_name">Measure It!</string>
     <string name="empty_string"> </string>
     <string name="points">Points</string>
     <string name="angles">Angles</string>
@@ -9,12 +9,12 @@
     <string name="volumes">Volumes</string>
 
     <!-- MainActivity -->
-    <string name="summary_main">Measure allows you to obtain a variety of magnitudes in just a few clicks. Try it out!</string>
+    <string name="summary_main">Measure It! allows you to obtain a variety of magnitudes in just a few clicks. Try it out!</string>
     <string name="get_started">Get Started!</string>
 
     <!-- About Us -->
     <string name="title_activity_about_us">About Us</string>
-    <string name="aboutUs">The app Measure is the result of a TdR (Treball de Recerca), a project in which students get the opportunity to research in a specific field they like.\nThe aim of the project is to give everyone a reliable tool to measure and identify the geometries around them at any situation, without any necessity of specific equipment which is not usually carried around, like a meter. To archive that, the solution uses something we all have with us everywhere, our mobile phones. Although there are some solutions which use a more sophisticated way of doing it, we wanted to explore a more mathematical approach. \nThis project was developed between 2018 and 2019 by the student Albert Canales Ros, and tutored by Jordi Sorolla, PhD in Mathematics. \nThe whole process of making the app can be found on GitHub by clicking the button below. \nIn order to contact us for any reason, we would appreciate you to do it by the email: albertcanalesros@gmail.com. \nWe hope you enjoy the app and you find it useful!\n</string>
+    <string name="aboutUs">The app Measure It! is the result of a TdR (Treball de Recerca), a project in which students get the opportunity to research in a specific field they like.\nThe aim of the project is to give everyone a reliable tool to measure and identify the geometries around them at any situation, without any necessity of specific equipment which is not usually carried around, like a meter. To archive that, the solution uses something we all have with us everywhere, our mobile phones. Although there are some solutions which use a more sophisticated way of doing it, we wanted to explore a more mathematical approach. \nThis project was developed between 2018 and 2019 by the student Albert Canales Ros, and tutored by Jordi Sorolla, PhD in Mathematics. \nThe whole process of making the app can be found on GitHub by clicking the button below. \nIn order to contact us for any reason, we would appreciate you to do it by the email: albertcanalesros@gmail.com. \nWe hope you enjoy the app and you find it useful!\n</string>
     <string name="source_code">Source Code</string>
 
     <!-- Test Sensors -->
@@ -35,7 +35,7 @@
     <!-- Tutorial -->
     <string name="title_activity_tutorial">Tutorial</string>
     <string name="skip">Skip</string>
-    <string name="tutorial_intro_1">With measure, you can easily calculate distances, angles, areas and volumes around you.  To do so, you will simply have to aim at the points which form them using the camera and following the steps on the next slides.  Once you have obtained all the necessary points you can get the desired magnitudes.</string>
+    <string name="tutorial_intro_1">With Measure It!, you can easily calculate distances, angles, areas and volumes around you.  To do so, you will simply have to aim at the points which form them using the camera and following the steps on the next slides.  Once you have obtained all the necessary points you can get the desired magnitudes.</string>
     <string name="tutorial_intro_2">Swipe to learn how to use the app!</string>
     <string name="example_video">Example Video</string>
 
