TutorialActivity removed and videos moved to MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <!-- MainActivity -->
     <string name="summary_main">Measure It! allows you to obtain a variety of magnitudes in just a few clicks. Try it out!</string>
     <string name="get_started">Get Started!</string>
+    <string name="example_video">Example</string>
+    <string name="tutorial_video">Tutorial</string>
 
     <!-- About Us -->
     <string name="title_activity_about_us">About Us</string>
@@ -31,34 +33,6 @@
     <string name="answer_automatic">Not sure</string>
     <string name="height_value_label">Value of h (cm):</string>
     <string name="continue_bt">Continue</string>
-
-    <!-- Tutorial -->
-    <string name="title_activity_tutorial">Tutorial</string>
-    <string name="skip">Skip</string>
-    <string name="tutorial_intro_1">With Measure It!, you can easily calculate distances, angles, areas and volumes around you.  To do so, you will simply have to aim at the points which form them using the camera and following the steps on the next slides.  Once you have obtained all the necessary points you can get the desired magnitudes.</string>
-    <string name="tutorial_intro_2">Swipe to learn how to use the app!</string>
-    <string name="example_video">Example Video</string>
-
-    <string name="tutorial_height_1">Firstly, let\'s consider how to position the device during the measurement.</string>
-    <string name="tutorial_automatic_height">As you have given your height on the previous activity, stand still during the measurement and locate the device at the height of your chest. \nIt is recommended to give a specific height if known, in order to get more precise results.</string>
-    <string name="tutorial_manual_height">As you have selected \'Of course\' and entered a specific height on the previous slide, you will have to locate the device at the given height from the ground.</string>
-    <string name="tutorial_height_2">Before starting the measure of the points, locate yourself and the device on  a comfortable position, where you can see the screen and aim at the points correctly.  To  aim at the points, you can only rotate the device keeping its camera steady, as moving it  from its initial position will highly worsen the results.</string>
-
-    <string name="tutorial_point_types_1">Before considering how to measure points, some simple concepts have to be  explained.  To be able to measure any point in space, you will firstly need to measure its \'Base Point.  That is to say, a point in the same place but on the ground. A comparison can be seen on the picture.</string>
-    <string name="tutorial_point_types_2">Note that if the desired point is on the ground, no previous point measurement is necessary.</string>
-
-    <string name="tutorial_points">To measure a point, click the \'Add\' button on the top-right corner and select an option the according type regarding if the desired point is on the ground (Based Point) or not (Non-based point).  To mark a point, click the button-middle button. Remember that if the desired point is not on the ground, you will have to aim first at its \'Base Point\' (explained in the previous slide).  You can cancel a point measurement by clicking on the bottom-left corner button.  You can finish measuring points and get to the results by clicking on the bottom-right corner button.</string>
-
-    <string name="tutorial_measure_1">To obtain precise values, measure the points following these steps:</string>
-    <string name="_1">1.</string>
-    <string name="tutorial_measure_2">Position the phone vertically.</string>
-    <string name="_2">2.</string>
-    <string name="tutorial_measure_3">Pan the camera around in order to aim at the same direction of the desired point.</string>
-    <string name="_3">3.</string>
-    <string name="tutorial_measure_4">Rotate the camera on a nodding movement to aim at the point.</string>
-    <string name="_4">4.</string>
-    <string name="tutorial_measure_5">Wait a second for the sensors to stabilise and mark the point.</string>
-    <string name="video_guide">Video Guide</string>
 
     <!-- Point Measure -->
     <string name="title_activity_point_method">Measure Points</string>
